caculate webview realsize and update tableview based on new height

--- a/RubyChina-iOS/Resources/web/index.html
+++ b/RubyChina-iOS/Resources/web/index.html
@@ -15,8 +15,9 @@
       font-size: 11px;
       line-height: 1.6;
       background-color: white;
-      padding: 5px;
+      padding: 8px;
       max-width: 320px;
+      margin: 0 !important;
     }
     a {
       color: #4183C4;
@@ -162,6 +163,8 @@
   </head>
   <body id="content">
     [[content_body]]
+    <script type="text/javascript">
+    </script>
  
  </script>
 
