--- a/RubyChina-iOS/Resources/web/detail.html
+++ b/RubyChina-iOS/Resources/web/detail.html
@@ -162,6 +162,7 @@
     </style>
   </head>
   <body id="content">
+      <h1>[[content_title]]</h1>
     [[content_body]]
     <script type="text/javascript">
     </script>
